[project]
name="kaggle-disaster-adaflood"
requires-python = ">= 3.10"
dependencies = [
    "torch",
    "transformers[torch]",
    "datasets",
    "evaluate",
    "pandas",
    "numpy",
    "click",
    "mlflow",
    "psutil",
    "pynvml"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"