[project]
name="kaggle-disaster-adaflood"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    "torch",
    "transformers[torch]",
    "sentence-transformers",
    "datasets",
    "evaluate",
    "pandas",
    "numpy",
    "click",
    "mlflow",
    "psutil",
    "pynvml",
    "scikit-learn",
    "notebook"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]